handled if budget already calculated for travel request

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,3 +9,4 @@ travel.priority.invalid=Invalid travel priority level: {0}
 location.id.invalid=Invalid location ID: {0}
 travel.request.already.processed=Travel Request with id {0} has already been processed.
 travel.request.status.invalid=Invalid request status. Must be either APPROVED or REJECTED.
+travel.request.budget.processed=Budget already calculated for this Travel Request.
